prevent overlap of user stories

--- a/sites/all/themes/nm_bootstrap/css/style.css
+++ b/sites/all/themes/nm_bootstrap/css/style.css
@@ -7173,7 +7173,7 @@ div.author-joined {
   padding-bottom: 50px;
 }
 
-#block-system-main .views-row, #block-views-reporters-block .views-row {
+#block-system-main .views-row, #block-views-reporters-block .views-row, #block-views-f66d0670fba5854a52cbb15197f898cf .view-id-neighbor_media_user_stories .views-row {
   clear: both;
 }
 
